--- a/index.html
+++ b/index.html
@@ -222,17 +222,7 @@
 
     <section id="code">
       <h2>Sample Code</h2>
-      <pre><code>// Example of loading a Minecraft world using the version-agnostic API
-import MinecraftAPI from 'minecraft-agnostic-loader';
-
-async function loadWorld(version, worldPath) {
-  const api = new MinecraftAPI({ version });
-  await api.loadWorld(worldPath);
-  console.log(`World loaded on Minecraft version ${version}!`);
-}
-
-loadWorld('1.19.4', './my-world')
-  .catch(err => console.error('Failed to load world:', err));
+      your mom
 </code></pre>
     </section>
   </main>
