--- a/index.html
+++ b/index.html
@@ -221,8 +221,80 @@
     </section>
 
     <section id="code">
-      <h2>Sample Code</h2>
-      your mom
+      <h2>Sample Code for adding a block with variants</h2>
+      {
+    "add_block": "bitt",
+    "block_hardness": 6,
+    "tool": "pickaxe",
+    "require_tool": true,
+    "creative_tab": "EZtones.Ztones",
+    "has_variants": true, {
+        "bitt1": {
+            "name": "Bitt 1",
+            "texture": "bitt1.png",
+        },
+        "bitt2": {
+            "name": "Bitt 2",
+            "texture": "bitt2.png",
+        },
+        "bitt3": {
+            "name": "Bitt 3",
+            "texture": "bitt2.png",
+        },
+        "bitt4": {
+            "name": "Bitt 4",
+            "texture": "bitt4.png",
+        },
+        "bitt5": {
+            "name": "Bitt 5",
+            "texture": "bitt5.png",
+        },
+        "bitt6": {
+            "name": "Bitt 6",
+            "texture": "bitt6.png",
+        },
+        "bitt7": {
+            "name": "Bitt 7",
+            "texture": "bitt7.png",
+        },
+        "bitt8": {
+            "name": "Bitt 8",
+            "texture": "bitt8.png",
+        },
+        "bitt9": {
+            "name": "Bitt 9",
+            "texture": "bitt9.png",
+        },
+        "bitt10": {
+            "name": "Bitt 10",
+            "texture": "bitt10.png",
+        },
+        "bitt11": {
+            "name": "Bitt 11",
+            "texture": "bitt11.png",
+        },
+        "bitt12": {
+            "name": "Bitt 12",
+            "texture": "bitt12.png",
+        },
+        "bitt13": {
+            "name": "Bitt 13",
+            "texture": "bitt13.png",
+        },
+        "bitt14": {
+            "name": "Bitt 14",
+            "texture": "bitt14.png",
+        },
+        "bitt15": {
+            "name": "Bitt 15",
+            "texture": "bitt15.png",
+        },
+        "bitt16": {
+            "name": "Bitt 16",
+            "texture": "bitt16.png",
+        },
+    }
+}
 </code></pre>
     </section>
   </main>
