--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Simpleload</title>
-  <title>Version Agnostic Minecraft API/Loader</title>
+  <h1>Version Agnostic Minecraft API/Loader</h1>
   <style>
     /* Reset and base */
     * {
