--- a/index.html
+++ b/index.html
@@ -1,35 +1,17 @@
+Copy
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Simpleload</title>
-  <h1>Version Agnostic Minecraft API/Loader</h1>
+  <h2>Version Agnostic Minecraft API/Loader</h2>
   <!-- Include highlight.js library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/default.min.css">
+  <!-- Include your custom stylesheet -->
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
   <script>hljs.highlightAll();</script>
-  <style>
-    /* Reset and base styles */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--bg);
-      color: var(--text);
-      line-height: 1.6;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      transition: background 0.3s, color 0.3s;
-    }
-    /* Other styles remain the same */
-    /* ... */
-  </style>
 </head>
 <body>
   <header>
